--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   <title>Awesome Books Store</title>
 </head>
 <body>
+  <header class="header">
+    <h2>Awesome Books</h2>
+    <nav class="header-nav">
+      <ul>
+        <li><Button>List</Button></li>
+        <li><Button>Add New</Button></li>
+        <li><Button>Contact</Button></li>
+      </ul>
+    </nav>
+  </header>
   <h1>All awesome books</h1>
   <table id="book-list">
   </table>
