add local time on top

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       </ul>
     </nav>
   </header>
+  <div id="date-time"></div>
   <section id="list-section" class="displsay-none">
     <h2 class="list-section-h2">All awesome books</h2>
     <table id="book-list">
